perf/style: fixed the loading clipping upon navigation adding loader, more styling and alignment on new details data, cleaned up production db

--- a/frontend/src/styles/components/details.module.css
+++ b/frontend/src/styles/components/details.module.css
@@ -266,26 +266,34 @@
 
 .namecontainer {
   display: flex;
-  justify-content: center;
+  flex: 1;
+  justify-content: space-around;
   align-items: center;
-  margin-bottom: 1%;
 }
 
 .platformcontainer {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
+  flex: 1;
+  justify-content: space-evenly;
+  padding: 1rem;
 }
 
 .platformnamecontainer {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
 }
 
 .originalreleasetxt {
   font-size: 0.7rem;
   flex: 1;
+}
+
+.nametxtcontainer {
+  flex: 1;
+  justify-content: center;
+  border-bottom: solid 2px var(--color-surface);
 }
 
 .platname {
@@ -306,14 +314,27 @@
   justify-content: center;
 }
 
+.ratingcontainer {
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  width: 40px;      
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+}
+
 .ratinglogo {
-  width: 40px;
+  width: 100%;
   height: auto;
+  display: block;
 }
 
 .uppercovercontainer {
   grid-column: 1/3;
   display: flex;
+  position: relative;
   width: 100%;
   justify-content: center; 
   align-items: flex-start; 
@@ -350,7 +371,8 @@
   margin: 2%;
 }
 
-.platformcontainer, .developername{
+
+.developername{
   flex: 1;
 }
 
@@ -448,6 +470,12 @@
   align-items: flex-end;
 }
 
+.genrescontainer {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
 .summarytxt {
   overflow: hidden;
   transition: all 0.4s ease-in-out; 
@@ -470,6 +498,14 @@
   padding: 4%;
   border-bottom: solid 2px var(--color-surface);
   border-top: solid 2px var(--color-surface);
+}
+
+.storylinetitle {
+  color: var(--color-text-muted); 
+  font-family: var(--font-family);
+  margin: 0;
+  text-align: left;
+  font-weight: 600;
 }
 
 .relatedMediaHeader {
@@ -505,8 +541,11 @@
 
 .screenshotcarouselcontainer {
   width: 100%;
+  transform: translateX(-currentIndex * 100%);
+  transition: transform 300ms ease-out;
 
 }
+
 
 .gamedetailsBtnContainer {
   position:absolute;
@@ -541,6 +580,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  overflow: hidden;
 }
 
 .screenshot {
@@ -699,7 +739,6 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 1%;
   justify-content: center;
   width: 100%;
 }
